# torchpipe

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  404.html  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_en.md  README_zh.md  _plan.md  base_env.sh  dumytest.py  index.html  installation.html  mkdocs.yml  modeling_llama.py  pyproject.toml  requirements.txt  search.json  setup.py  update.sh  version.txt  zensical.toml
cpp/hami/: CMakeLists.txt  extension.hpp  libhami.cpp  libhami.hpp_
cpp/hami/builtin/: CMakeLists.txt  aspect.cpp  aspect.hpp  basic_backends.cpp  basic_backends.hpp  benchmark.cpp  benchmark.hpp  box.cpp  box.hpp  cat_split.cpp  cat_split.hpp  condition.cpp  condition.hpp  control_plane.cpp  control_plane.hpp  generate_backend.cpp  generate_backend.hpp  identity.cpp  identity.hpp  interpreter.cpp  interpreter.hpp  ioc.cpp  ioc.hpp  key_operator.cpp  launch.cpp  launch.hpp  log.cpp  or.cpp  or.hpp  page_table.cpp  page_table.hpp  parser.cpp  parser.hpp  proxy.cpp  proxy.hpp  register_node.cpp  register_node.hpp  result_parser.cpp  result_parser.hpp  result_queue.cpp  (+9 more)
cpp/hami/core/: CMakeLists.txt  any.cpp  any.hpp  backend.cpp  backend.hpp  dict.hpp  event.cpp  event.hpp  general_queue.hpp  helper.cpp  helper.hpp  parser.cpp  parser.hpp  queue.cpp  queue.hpp  reflect.cpp  reflect.h  request_size.hpp  string.hpp  task_keys.cpp  task_keys.hpp
cpp/hami/helper/: CMakeLists.txt  base_logging.cpp  base_logging.hpp  exception.hpp  filesystem.cpp  filesystem.hpp  hami_export.h  initialization.cpp_  initialization.hpp  kvstorage.hpp  macro.h  params.cpp  params.hpp  queue.hpp  range.hpp  resource_pool.hpp  sized_queue.hpp  string.cpp  string.hpp  symbol.cpp  symbol.hpp  thread_pool.cpp  thread_pool.hpp  threadsafe_queue.hpp  threadsafe_sized_queue.hpp  threadsafe_unordered_map.hpp  timer.cpp  timer.hpp  toml_parser.cpp  toml_parser.hpp  unique_index.cpp  unique_index.hpp
cpp/hami/schedule/: CMakeLists.txt  aspect_test.cpp_  contiguous_batching.cpp  contiguous_batching.hpp  continuous_batching.cpp  continuous_batching.hpp  dag.cpp  dag.hpp  event_guard.cpp  event_guard.hpp  restart.cpp  restart.hpp  restart_test.cpp  schedule.cpp  schedule.hpp  schedule_states.cpp  schedule_states.hpp
cpp/omniback/: CMakeLists.txt  extension.hpp  libomniback.cpp
cpp/omniback/builtin/: CMakeLists.txt  aspect.cpp  aspect.hpp  basic_backends.hpp  benchmark.hpp  cat_split.cpp  condition.cpp  control_plane.cpp  generate_backend.cpp  identity.cpp  interpreter.cpp  interpreter.hpp  key_operator.cpp  launch.hpp  or.cpp  page_table.cpp  proxy.cpp  proxy.hpp  select.cpp  sequential.cpp  sequential.hpp
cpp/omniback/core/: any.hpp  backend.hpp  general_queue.hpp  helper.hpp  reflect.h
cpp/omniback/helper/: CMakeLists.txt  filesystem.cpp  filesystem.hpp  initialization.cpp_  sized_queue.hpp
cpp/omniback/schedule/: aspect_test.cpp_  continuous_batching.hpp  dag.hpp  event_guard.hpp  restart.hpp  restart_test.cpp  schedule.cpp
plugins/torchpipe/: .gitignore  MANIFEST.in_  README.md  backends.toml  build_aot_wheels.sh  build_aot_wheels_legacy.sh  build_backend.py  download_and_build_opencv.py  download_and_install_tensorrt.py  group-torchpipe.toml  pyproject.toml  pytest.ini  setup copy.py  setup.cfg  setup.py  setup_.py  version.txt
plugins/torchpipe/csrc/helper/: dlpack_helper.hpp  torch.cpp
plugins/torchpipe/csrc/nvjpeg_torch/: README.md
plugins/torchpipe/csrc/tensorrt_torch/: TensorrtInferTensor.cpp  allocator.cpp  allocator.hpp  model.cpp  tensorrt_helper.hpp
plugins/torchpipe/csrc/torchplugins/: CvtColorTensor.cpp  CvtColorTensor.hpp  GpuTensor.cpp  ResizeTensor.cpp  cat_split_tensor.hpp  kvcacheTensor.cpp
plugins/torchpipe/docs/: getting_started.md  index.md  installation.md
plugins/torchpipe/docs/css/: version-select.css
plugins/torchpipe/docs/js/: version-select.js
plugins/torchpipe/docs/usage/: basic_usage.md  links.md
plugins/torchpipe/examples/cvcuda-python/: readme.md  runcode.py
plugins/torchpipe/examples/llama2/: .gitignore  chat_client.py  chat_client.sh  client.sh  exp_flashinfer.py  graph.py  openai_chat_client.py  plain_llama2.py  plain_llama2_trt.py  plain_llama2_trt_multistream.py  readme.md  requirements.txt  start_a10.sh  start_a10_trt.sh  streaming_llama2.py  test_DecodeStream.py
plugins/torchpipe/examples/random/: main.py  random.toml
plugins/torchpipe/examples/resnet/: .gitignore  config.toml  exp_benchmark.py  exp_imaneget.py  exp_imaneget.py_need_repair  exp_resnet50.py  requirements.txt  resnet50.py  resnet50.toml  test_acc.py
plugins/torchpipe/examples/timm/: .gitignore  export.py  infer.py  readme.md
plugins/torchpipe/examples/timm_model/: .gitignore  export.py  infer.py  readme.md
plugins/torchpipe/examples/yolo/: .gitignore  readme.md  yolo.cpp  yolo_deploy.py  yolo_onnx.py  yolo_visual.py  yolo_visual_with_post.py
plugins/torchpipe/exp/: .gitignore  hami_w_cpu_gpu.py  hamiwcpu.sh  hamiwgpu.sh  readme.md  readme_neu.md  readme_triton.md  requirements.txt
plugins/torchpipe/exp/cfg/: resnet101_bs40.toml
plugins/torchpipe/exp/decouple_eval/: benchmark.py  pipeline.py  pipeline_gpu.toml  readme.md  test_tools.py  triton_utils.py  yolox_new.cpp
plugins/torchpipe/exp/exp0/: benchmark.py  readme.md
plugins/torchpipe/exp/exp1/: benchmark.py
plugins/torchpipe/exp/exp2/: benchmark.py  (+6 more)
plugins/torchpipe/resnet/: config.toml
plugins/torchpipe/tests/: .gitignore  t_cvcuda.py  test_DecodeMat.py  test_DecodeTensor.py  test_ResizeTensor.py  test_acc.py  test_bench_trt.py  test_m2t.py  test_mat.py  test_none.py  test_trt.py  test_v2_trt.py
plugins/torchpipe/torchpipe/: __init__.py  extension.py  load_hami.py  load_libs.py  load_omniback.py
test/cpp_test_unmaintained_do_not_use_it/: BaseTypes_test.cpp  CMakeLists.txt  gtest.md  readme.md  sample.cpp  test_C10Exception.cpp  test_CropTensor.cpp  test_DecodeTensor.cpp  test_Remove.cpp  test_ResizePadTensor.cpp  test_ResizeTensor.cpp  test_TensorHWC.cpp  test_cvtColorTensor.cpp
(+1198 files in other folders)
