[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
  "cmake>=3.18",
  "ninja",
  "setuptools-scm",
  "pybind11",
]

[project]
authors = [
  {name = "torchpipe Team", email = "hydzhang@hotmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  'tomli>=2.0.1; python_version < "3.11"',
]
description = "A Python library for batched backend scheduling"
dynamic = ["version"]
license = {text = "Apache-2.0"}
name = "hami-core"
readme = "README.md"
requires-python = ">=3.8"
[tool.setuptools_scm]
# write_to = "hami/version.py"
# version_file = "VERSION.txt"
local_scheme = "time-dot-node"
normalize = false
write_to = "VERSION.txt"
fallback_version = "0.0.0"


[project.urls]
Homepage = "https://github.com/torchpipe/torchpipe"

[tool.setuptools]
include-package-data = true
packages = ["hami", "hami._C"]
zip-safe = true
[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
# version = {file = "VERSION"}

[tool.setuptools.exclude-package-data]
"*" = ["*.h", "*.cc", "*.bak", "*.in", "csrc/*", "CMakeLists.txt", "hami/csrc/"]

# [tool.setuptools.cmdclass]
# build_ext = "setup.CMakeBuild"

# [tool.setuptools.packages.find]
# include = ["hami*"]

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files = "setup.py"
show_error_codes = true
strict = true
warn_unreachable = true


