[build-system]
requires = [
  "setuptools>=61",  # 支持 file-based dynamic deps
  "wheel",
  "cmake>=3.18",
  "ninja",
  "setuptools-scm[toml]>=7",
  "pybind11>=2.10",
]
build-backend = "setuptools.build_meta"

[project]
name = "omniback"
# version = "1.50.0"
dynamic = ["version", "optional-dependencies"]

description = "A Python library for batched backend scheduling"
readme = "docs/readme.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [{name = "torchpipe Team", email = "hydzhang@hotmail.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  'tomli>=2.0.1; python_version >= "3.8"',
  'numpy>=1.19',
]

# dynamic = ["optional-dependencies"]

[project.urls]
Homepage = "https://github.com/torchpipe/torchpipe"

[tool.setuptools]
packages = ["omniback", "omniback.utils"] # , "omniback.csrc"
# 不要 include omniback._C as a Python package — it's a C extension
zip-safe = false
include-package-data = true

# 关键：通过 MANIFEST.in 控制文件包含，避免在 package_data 冗余声明
[tool.setuptools.package-data]
omniback = [
  "csrc/*.hpp",
  "csrc/*.h",
  "include/omniback/*.h",
  "include/spdlog/*.h",
  "include/spdlog/**/*.h",
  "_build_info.py",
  "_version.py",
  "*.so"
]

[tool.setuptools.exclude-package-data]
"*" = ["*.cc", "*.cpp", "*.cu", "*.bak", "*.in", "CMakeLists.txt", "test_*"]

[tool.setuptools_scm]
local_scheme = "node-and-timestamp"
normalize = false
write_to = "omniback/_version.py"  # 推荐生成版本文件

[tool.mypy]
strict = true
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files = ["setup.py"]

# [project.optional-dependencies]
# dev = ["pytest", "mypy", "black"]