# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "omniback"
dynamic = ["version"]

readme = "README.md"
license = { text = "Apache 2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
]
keywords = ["machine learning", "inference"]
requires-python = ">=3.8"

dependencies = ["apache-tvm-ffi>=0.1.7", "fire", "tomli>=1.2.3; python_version < '3.11'"]

[build-system]
requires = ["scikit-build-core>=0.11.0", "apache-tvm-ffi==0.1.7","setuptools-scm"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# the wheel is abi agnostic
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.py-api = "py3"

wheel.packages = ["python/omniback"]
# The install dir matches the import name
wheel.install-dir = "omniback"
wheel.exclude = []


minimum-version = "build-system.requires"
ninja.version = ">=1.11"
ninja.make-fallback = false


# Build configuration
build-dir = "build"


build.verbose = true

# CMake configuration
cmake.version = "CMakeLists.txt"
cmake.build-type = "RelWithDebugInfo"
cmake.define.USE_CXX11_ABI = { env = "USE_CXX11_ABI" }  # 读取环境变量
cmake.define.BUILD_BOTH_ABIS = { env = "BUILD_BOTH_ABIS" }  # 读取环境变量

cmake.define.SKIP_CMAKE = { env = "SKIP_CMAKE" }  # 读取环境变量

cmake.define.CMAKE_BUILD_PARALLEL_LEVEL = { env = "CMAKE_BUILD_PARALLEL_LEVEL" }

# Logging
logging.level = "INFO"

# Wheel configuration

sdist.include = [
  "python/omniback/_version.py",
  "/python/omniback/**/*.py",
   "/pyproject.toml",
  "/cmake/**/*",
  "/src/**/*.cpp",
  "/include/**/*",
  "/3rdparty/bs_thread_pool/*.hpp",
  "/3rdparty/spdlog/include/**/*",
  "/3rdparty/tinytoml/*.h",
  "/plugins/**/*",  
]

sdist.exclude = [
  "**/.git",
  "**/.github",
  "**/__pycache__",
  "**/*.pyc",
  "build",
  "dist",
  "plugins/**/examples/**", 
]

[tool.setuptools_scm]
version_file = "python/omniback/_version.py"
write_to = "python/omniback/_version.py"
fallback_version = "0.0.1-dev"
tag_regex = "^t(.*)"
local_scheme = "no-local-version"
git_describe_command = ["git", "describe", "--tags", "--long", "--match", "t*"]


[tool.cibuildwheel]
skip = "*musllinux*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
