[project]
name = "torchpipe"
version = "0.1.4"
requires-python = ">=3.8"
description = "Serving inside Pytorch"
dependencies = [
    "torch",
    "omniback",
    "numpy",
    "setuptools"
]

authors = [{ name = "torchpipe team" }]
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["torchpipe", "torchpipe.*"]

[tool.setuptools.package-data]
"torchpipe" = [
    "*.py",
    "*.so", "*.dll", "*.dylib",
    "csrc/**/*",
    "csrc/**/.*"  # 包含隐藏文件（如 .gitignore，可选）
]